Apollo Accessories and ETS
Add Apollo J-class accessories and ETS parts

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -88,6 +88,14 @@ Localization
 		#ApolloSMB2BDBDesc = The Apollo Service Module contains the main propellant tanks, the fuel cells, life support and everything else that it is needed for a flight to the Moon.
 		#ApolloSMB2BDBBayToggle = Toggle SIM Bay Door
 		#ApolloSMB2BDBBayJettison = Jettison SIM Bay Door
+		//	============================================================================
+		//		ROC-ApolloDipoleBDB
+		#rocApolloDipoleBDBTitle = Apollo 17 HF Dipole Radar Antenna
+		#rocApolloDipoleBDBDesc = An extending dipole antenna used to gather high frequency radar sounding data. Can be used as a communications antenna in a pinch. Attach in a pair to the nodes on the Apollo engine plate.
+		//	============================================================================
+		//		ROC-ApolloVHFBDB
+		#rocApolloVHFBDBTitle = Apollo 17 VHF Yagi Antenna
+		#rocApolloVHFBDBDesc = A folding Yagi antenna designed to enhance gathering of VHF radar sounding data. Can be used as a communications antenna in a pinch. Attach to the node on the Apollo engine mount just under the science bay.
 
 		//	============================================================================
 		//	BDB Apollo Block 3+
@@ -151,5 +159,24 @@ Localization
 		//		ROC-LEMMESABDB
 		#rocLEMMESABDBTitle = Apollo LM Material Experiment Stowage Assembly
 		#rocLEMMESABDBDesc = Storage bay, containing astronaut EVA equipment, and cameras to record the first steps onto the moon. Place to the left of the LM ladder.
+		
+		//	============================================================================
+		//	BDB ASTP
+		//	============================================================================
+		//		ROC-ApolloAPAS75BDB
+		#rocApolloAPAS75DBTitle = APAS-75 Androgynous Docking Port
+		#rocApolloAPAS75DBDesc = Androgynous Peripheral Attachment System 75. First fully androgynous docking port, designed for the Apollo Soyuz Test Project.
+		//	============================================================================
+		//		ROC-ApolloASTPAdapterBDB
+		#rocApolloASTPAdapterBDBTitle = Apollo Soyuz Test Project Docking Module
+		#rocApolloASTPAdapterBDBDesc = A specialized module designed to allow the docking of two separate spacecraft to either end of this module. In addition to mating spacecraft, it provides additional living/working space, as well as a platform for experiments.
+		//	============================================================================
+		//		ROC-ApolloASTPUVXBDB
+		#rocApolloASTPUVXBDBTitle = Apollo-Soyuz Test Project UV Absorbtion Experiment
+		#rocApolloASTPUVXBDBDesc = This experiment is a modified and slightly enhanced version of the Far Ultraviolet Spectrometer. This experiment can be used to study measure emissions from celestial bodies, zodiacal light, solar atmosphere emissions, stellar emissions, and galactic emissions.
+		//	============================================================================
+		//		ROC-ApolloASTPVHFBDB
+		#rocApolloASTPVHFBDBTitle = Apollo-Soyuz Test Project VHF-FM Antenna
+		#rocApolloASTPVHFBDBDesc = A small, fixed VHF-FM whip antenna for the Apollo-Soyuz Test Project Docking Module.
 	}
 }
