--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
@@ -1227,6 +1227,9 @@ KSP_MODEL_SHADER
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ProbeDockingPort
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ConeDockingPort
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block2_SPS
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_APAS75
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_VHFantenna
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_dipoleAntenna
 
 	MATERIAL
 	{
@@ -1240,12 +1243,12 @@ KSP_MODEL_SHADER
 		PROPERTY
 		{
 			name = _Color
-			color = 1.5, 1.5, 1.5
+			color = 2.0, 2.0, 2.0
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.25
+			float = 0.8
 		}
 		PROPERTY
 		{
