Added TU Configs for the LEM Legs and MESA

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
@@ -1131,6 +1131,384 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	%MODULE[SSTURecolorGUI] {}
 }
 
+//	============================================================================
+//	BDB LEM - Legs
+//	============================================================================
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-Legs-Gold
+	recolorable = false
+	
+	MATERIAL
+	{
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 1
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 2
+		}
+	}
+}
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-Legs-Silver
+	recolorable = false
+	
+	MATERIAL
+	{
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 1
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 2
+		}
+	}
+}
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-Legs-Recolor
+	recolorable = true
+	
+	MATERIAL
+	{
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/LM_Descent-DIFF
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+        texture = _MaskTex, ROCapsules/Assets/BDB/Apollo/LM_Descent-MASK
+		keyword = TU_RECOLOR
+		vector = _DiffuseNorm,0.5,0.5,0.5
+		vector = _MetalNorm,0.5,0.5,0.5
+		vector = _SmoothnessNorm,0.5,0.5,0.5
+	}
+	
+	COLORS
+    {
+        mainColor = 255,255,255,120,0,255
+        secondColor = 165,72,60,120,0,255
+        detailColor = 10,10,10,120,50,255
+    }
+}
+	
+@PART[ROC-LEMLegsBDB]:NEEDS[TexturesUnlimited]
+{
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Gold
+		
+		VARIANT
+		{
+			name = Gold
+			themeName = Gold
+			displayName = BDB Gold
+			primaryColor = #c5b358
+			secondaryColor = #c5b358
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-Legs-Gold }
+		}
+		
+		VARIANT
+		{
+			name = Silver
+			themeName = Silver
+			displayName = BDB Silver
+			primaryColor = #c0c0c0
+			secondaryColor = #c0c0c0
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-Legs-Silver }
+		}
+		
+		VARIANT
+		{
+			name = Recolor
+			themeName = Recolor
+			displayName = Recolor
+			primaryColor = #ff0000
+			secondaryColor = #00ff00
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-Legs-Recolor }
+		}
+	}
+	
+	%MODULE[TUPartVariant] {}
+	%MODULE[SSTURecolorGUI] {}
+}
+
+//	============================================================================
+//	BDB LEM - MESA
+//	============================================================================
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-MESA-Gold
+	recolorable = false
+	
+	// Ascent Textures (bluedog_LM_Ascent)
+	MATERIAL
+	{
+		excludeMesh = BaseMesh
+		excludeMesh = polySurface42
+		excludeMesh = polySurface43
+		excludeMesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 1.0
+		}
+	}
+	
+	// Descent Textures (bluedog_LM_Descent)
+	MATERIAL
+	{
+		mesh = BaseMesh
+		mesh = polySurface42
+		mesh = polySurface43
+		mesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+        //texture = _SpecGlossMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_Spec
+		//keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 1
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 2
+		}
+	}
+}
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-MESA-Silver
+	recolorable = false
+	
+	// Ascent Textures (bluedog_LM_Ascent)
+	MATERIAL
+	{
+		excludeMesh = BaseMesh
+		excludeMesh = polySurface42
+		excludeMesh = polySurface43
+		excludeMesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 1.0
+		}
+	}
+	
+	// Descent Textures (bluedog_LM_Descent)
+	MATERIAL
+	{
+		mesh = BaseMesh
+		mesh = polySurface42
+		mesh = polySurface43
+		mesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+        //texture = _SpecGlossMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_Spec
+		//keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 1
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 2
+		}
+	}
+}
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-LEM-MESA-Recolor
+	recolorable = true
+	
+	// Ascent Textures (bluedog_LM_Ascent)
+	MATERIAL
+	{
+		excludeMesh = BaseMesh
+		excludeMesh = polySurface42
+		excludeMesh = polySurface43
+		excludeMesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 1.0
+		}
+	}
+	
+	// Descent Textures (bluedog_LM_Descent)
+	MATERIAL
+	{
+		mesh = BaseMesh
+		mesh = polySurface42
+		mesh = polySurface43
+		mesh = polySurface44
+		shader = TU/Metallic
+		texture = _MainTex, ROCapsules/Assets/BDB/Apollo/LM_Descent-DIFF
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+        texture = _MaskTex, ROCapsules/Assets/BDB/Apollo/LM_Descent-MASK
+		keyword = TU_RECOLOR
+		vector = _DiffuseNorm,0.5,0.5,0.5
+		vector = _MetalNorm,0.5,0.5,0.5
+		vector = _SmoothnessNorm,0.5,0.5,0.5
+	}
+	
+	COLORS
+    {
+        mainColor = 255,255,255,120,0,255
+        secondColor = 165,72,60,120,0,255
+        detailColor = 10,10,10,120,50,255
+    }
+}
+	
+@PART[ROC-LEMMESABDB]:NEEDS[TexturesUnlimited]
+{
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Gold
+		
+		VARIANT
+		{
+			name = Gold
+			themeName = Gold
+			displayName = BDB Gold
+			primaryColor = #c5b358
+			secondaryColor = #c5b358
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-MESA-Gold }
+		}
+		
+		VARIANT
+		{
+			name = Silver
+			themeName = Silver
+			displayName = BDB Silver
+			primaryColor = #c0c0c0
+			secondaryColor = #c0c0c0
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-MESA-Silver }
+		}
+		
+		VARIANT
+		{
+			name = Recolor
+			themeName = Recolor
+			displayName = Recolor
+			primaryColor = #ff0000
+			secondaryColor = #00ff00
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-LEM-MESA-Recolor }
+		}
+	}
+	
+	%MODULE[TUPartVariant] {}
+	%MODULE[SSTURecolorGUI] {}
+}
+
+
+
 KSP_MODEL_SHADER
 {
 	name = ROC-LEMEngines
