FINALLY have the Apollo CM textures corrected

--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB_CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB_CM.cfg
@@ -757,8 +757,6 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 
 	MATERIAL
 	{
-		mesh = Base
-		mesh = colorswitch_skylab
 		mesh = skylabMat
         shader = TU/Metallic
         texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
@@ -781,6 +779,33 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 		{
 			name = _Smoothness
 			float = 0.8
+		}
+	}
+	
+	MATERIAL
+	{
+		mesh = baseMat
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 1.2
 		}
 	}
 	
@@ -1109,7 +1134,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			{
 				colorswitch_bp = false
 				colorswitch_skylab = true
-				Painted = true
+				Painted = false
 				colorswitch = false
 			}
 		}
