Add TU Support and Recoloring for Mercury

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -105,29 +105,29 @@ PART
 		}
 	}
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitchPaint
-		switcherDescription = Paint
-		switcherDescriptionPlural = Paints
-		affectDragCubes = True
-		affectFARVoxels = True
-		SUBTYPE
-		{
-			name = Black
-		}
-		SUBTYPE
-		{
-			name = White
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
-				transform = Skin
-				transform = cover
-			}
-		}
-	}
+	// MODULE
+	// {
+		// name = ModuleB9PartSwitch
+		// moduleID = meshSwitchPaint
+		// switcherDescription = Paint
+		// switcherDescriptionPlural = Paints
+		// affectDragCubes = True
+		// affectFARVoxels = True
+		// SUBTYPE
+		// {
+			// name = Black
+		// }
+		// SUBTYPE
+		// {
+			// name = White
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
+				// transform = Skin
+				// transform = cover
+			// }
+		// }
+	// }
 }
 
 //	================================================================================
