--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -484,46 +484,46 @@ PART
 	}
 
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitchPaint
-		switcherDescription = Paint
-		switcherDescriptionPlural = Paints
-		affectDragCubes = True
-		affectFARVoxels = True
-		SUBTYPE
-		{
-			name = Black
-			transform = Black
-		}
-		SUBTYPE
-		{
-			name = White
-			transform = Black
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
-				baseTransform = Black
-				transform = Skin
-			}
-		}
-		SUBTYPE
-		{
-			name = Mixed
-			transform = Mixed
-		}
-		SUBTYPE
-		{
-			name = Boilerplate
-			transform = Orange
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
-				transform = Skin
-			}
-		}
-	}
+	// MODULE
+	// {
+		// name = ModuleB9PartSwitch
+		// moduleID = meshSwitchPaint
+		// switcherDescription = Paint
+		// switcherDescriptionPlural = Paints
+		// affectDragCubes = True
+		// affectFARVoxels = True
+		// SUBTYPE
+		// {
+			// name = Black
+			// transform = Black
+		// }
+		// SUBTYPE
+		// {
+			// name = White
+			// transform = Black
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
+				// baseTransform = Black
+				// transform = Skin
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = Mixed
+			// transform = Mixed
+		// }
+		// SUBTYPE
+		// {
+			// name = Boilerplate
+			// transform = Orange
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
+				// transform = Skin
+			// }
+		// }
+	// }
 	
 	MODULE
 	{
