Correct TE-316 performance
correct TE-316 Mercury Retro performance based on "Solid rocket propulsion technology for de-orbiting
spacecraft"

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -55,6 +55,8 @@ PART
 		fxOffset = 0, 0, 0.0
 	}
 
+	//Source: Solid rocket propulsion technology for de-orbiting spacecraft
+	//https://www.sciencedirect.com/science/article/pii/S1000936121003319
 	MODULE
 	{
 		name = ModuleEngineConfigs
@@ -63,8 +65,8 @@ PART
 		CONFIG
 		{
 			name = MercuryRetro
-			minThrust = 4.45
-			maxThrust = 4.45
+			minThrust = 5.1	//nominal thrust 5.1 kN
+			maxThrust = 5.1
 			heatProduction = 2
 
 			powerEffectName = Solid-Upper
@@ -77,7 +79,7 @@ PART
 			}
 			atmosphereCurve
 			{
-				key = 0 107.04
+				key = 0 206
 				key = 1 85
 			}
 			chamberNominalTemp	 = 1400
