Fix temp on dyna skids
Correct temperature settings on Dyna skids

--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
@@ -157,5 +157,13 @@ PART
 		name = KSPWheelDamage
 		impactTolerance = 370
 	}
+}
 
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaSkidFront]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+	@maxTemp = 1144
 }
