--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
@@ -156,5 +156,13 @@ PART
 		name = KSPWheelDamage
 		impactTolerance = 370
 	}
+}
 
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaSkidRear]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+	@maxTemp = 1144
 }
