Update naming, fix broken loc tag

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -34,7 +34,7 @@ Localization
 		#rocApolloDrogueDockPortBDBDesc = This is the drogue (accepting) part of the Apollo Docking System. It will only work with the Apollo Command Module Probe.
 		//	============================================================================
 		//		ROC-ApolloDrogueParachuteBDB
-		#rocApolloDrogueParachuteBDBTitle = Apollo Drogue Parachute Pack
+		#rocApolloDrogueParachuteBDBTitle = Apollo Command Module Drogue Parachute Pack
 		#rocApolloDrogueParachuteBDBDesc = The drogue parachute pack is meant to slow down the Apollo spacecraft at a high altitude in preparation for the deployment of the main parachute pack. Attach this to the front node before placing the Forward Heat Shield.
 		//	============================================================================
 		//		ROC-ApolloEngineMountBDB
@@ -46,7 +46,7 @@ Localization
 		#rocApolloEVALightBDBDesc = EVA spotlight to provide illumination for EVA operations. Attach to the Apollo Service Module decoupler.
 		//	============================================================================
 		//		ROC-ApolloForwardHSBDB
-		#rocApolloForwardHSBDBTitle = Apollo CM Forward Heat Shield
+		#rocApolloForwardHSBDBTitle = Apollo Command Module Forward Heat Shield
 		#rocApolloForwardHSBDBDesc = The forward heat shield for the Apollo Command Module. Attach this to the top of the CM after placing the Drogue and Main Parachutes.
 		//	============================================================================
 		//		ROC-ApolloHGABDB
@@ -54,7 +54,7 @@ Localization
 		#rocApolloHGABDBDesc = The primary High Gain Antenna of the Apollo Spacecraft. Attach to the node on the Service Module Engine Mount.
 		//	============================================================================
 		//		ROC-ApolloHSBDB
-		#rocApolloHSBDBTitle = Apollo Heatshield
+		#rocApolloHSBDBTitle = Apollo Command Module Heatshield
 		#rocApolloHSBDBDesc = Lunar-rated heatshield for the Apollo Capsule.
 		//	============================================================================
 		//		ROC-ApolloLESBDB
@@ -72,7 +72,7 @@ Localization
 		#rocApolloNoseconeBDBDesc = Aerodynamic nosecone used on Apollo Block I, since docking missions weren't planned until Block II.
 		//	============================================================================
 		//		ROC-ApolloParachuteBDB
-		#rocApolloParachuteBDBTitle = Apollo Main Parachute Pack
+		#rocApolloParachuteBDBTitle = Apollo Command Module Main Parachute Pack
 		#rocApolloParachuteBDBDesc = The main parachute pack of the Apollo Command Module. Attach this to the front node before placing the Forward Heat Shield.
 		//	============================================================================
 		//		ROC-ApolloProbeDockPortBDB
