--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloParachuteBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloParachuteBDB.cfg
@@ -34,8 +34,8 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = #rocApolloParachuteBDBTitle //Apollo Main Parachute Pack
-	manufacturer = #roMfrNorthrup //Northrop
+	title = #rocApolloParachuteBDBTitle //Apollo Command Module Main Parachute Pack
+	manufacturer = #roMfrNorthrop //Northrop
 	description = #rocApolloParachuteBDBDesc //The main parachute pack of the Apollo Command Module. Attach this to the front node before placing the Forward Heat Shield.
 	
 	mass = 0.19595	//RealChute overrides this if installed
