--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloDrogueParachuteBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloDrogueParachuteBDB.cfg
@@ -34,7 +34,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = #rocApolloDrogueParachuteBDBTitle //Apollo Drogue Parachute Pack
+	title = #rocApolloDrogueParachuteBDBTitle //Apollo Command Module Drogue Parachute Pack
 	manufacturer = #roMfrNorthrop //Northrop
 	description = #rocApolloDrogueParachuteBDBDesc //The drogue parachute pack is meant to slow down the Apollo spacecraft at a high altitude in preparation for the deployment of the main parachute pack. Attach this to the front node before placing the Forward Heat Shield.
 	
