--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -168,7 +168,7 @@ Localization
 		#rocApolloAPAS75DBDesc = Androgynous Peripheral Attachment System 75. First fully androgynous docking port, designed for the Apollo Soyuz Test Project.
 		//	============================================================================
 		//		ROC-ApolloASTPAdapterBDB
-		#rocApolloASTPAdapterBDBTitle = Apollo Soyuz Test Project Docking Module
+		#rocApolloASTPAdapterBDBTitle = Apollo-Soyuz Test Project Docking Module
 		#rocApolloASTPAdapterBDBDesc = A specialized module designed to allow the docking of two separate spacecraft to either end of this module. In addition to mating spacecraft, it provides additional living/working space, as well as a platform for experiments.
 		//	============================================================================
 		//		ROC-ApolloASTPUVXBDB
