--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
@@ -108,6 +108,12 @@ PART
 		}
 		TANK
 		{
+			name = Nitrogen
+			amount = 1500
+			maxAmount = 1500
+		}
+		TANK
+		{
 			name = ElectricCharge
 			amount = 33000
 			maxAmount = 33000
