--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -333,11 +333,13 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Apollo/LM_AscentStage
+		rotation = 0, 180, 0
 	}
 
 	INTERNAL
 	{
 		name = ROC-LEMInternal
+		offset = 0, -0.25, 0
 	}
 
 	scale = 1.0
@@ -603,37 +605,13 @@ PART
 
 	EFFECTS
 	{
-		running
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_big
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.4 0.8
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				//localOffset = 0, 0, 1
-			}
-		}
 		control
 		{
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				clip = sound_rocket_mini
-				transformName = RCSthruster
+				transformName = rcsTransform
 				volume = 0.0 0.0
 				volume = 0.02 0.1
 				volume = 0.5 0.1
@@ -645,41 +623,13 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSthruster
+				transformName = rcsTransform
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = FXTransform
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
 			}
 		}
 	}
