Fix LM MESA depth mask
Fix LM MESA depth mask - TU interactions breaking the depth mask. Unfortunately, this means the base color of the MESA cannot be edited.

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
@@ -1307,7 +1307,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	// Descent Textures (bluedog_LM_Descent)
 	MATERIAL
 	{
-		mesh = BaseMesh
+		//mesh = BaseMesh	//exclude this, otherwise it breaks the depth mask
 		mesh = polySurface42
 		mesh = polySurface43
 		mesh = polySurface44
@@ -1345,6 +1345,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	MATERIAL
 	{
 		excludeMesh = BaseMesh
+		excludeMesh = depthMask
 		excludeMesh = polySurface42
 		excludeMesh = polySurface43
 		excludeMesh = polySurface44
@@ -1373,7 +1374,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	// Descent Textures (bluedog_LM_Descent)
 	MATERIAL
 	{
-		mesh = BaseMesh
+		//mesh = BaseMesh	//exclude this, otherwise it breaks the depth mask
 		mesh = polySurface42
 		mesh = polySurface43
 		mesh = polySurface44
@@ -1411,6 +1412,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	MATERIAL
 	{
 		excludeMesh = BaseMesh
+		excludeMesh = depthMask
 		excludeMesh = polySurface42
 		excludeMesh = polySurface43
 		excludeMesh = polySurface44
@@ -1439,7 +1441,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	// Descent Textures (bluedog_LM_Descent)
 	MATERIAL
 	{
-		mesh = BaseMesh
+		//mesh = BaseMesh	//exclude this, otherwise it breaks the depth mask
 		mesh = polySurface42
 		mesh = polySurface43
 		mesh = polySurface44
