--- a/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
@@ -1279,6 +1279,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	MATERIAL
 	{
 		excludeMesh = BaseMesh
+		excludeMesh = depthMask
 		excludeMesh = polySurface42
 		excludeMesh = polySurface43
 		excludeMesh = polySurface44
