Add TU support to Apollo Block III CM

--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB_CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB_CM.cfg
@@ -961,7 +961,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	}
 }
 
-@PART[ROC-ApolloCMBDB|ROC-ApolloNoseconeBDB|ROC-ApolloForwardHSBDB|ROC-ApolloHSBDB]:NEEDS[TexturesUnlimited]
+@PART[ROC-ApolloCMBDB|ROC-ApolloNoseconeBDB|ROC-ApolloForwardHSBDB|ROC-ApolloHSBDB|ROC-ApolloCMBDBBlockIII|ROC-ApolloHSBDBBlockIII]:NEEDS[TexturesUnlimited]
 {
 	MODULE
 	{
