LM Waterfall configs

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/Waterfall_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/Waterfall_Support_LEMBDB.cfg
@@ -1,19 +1,19 @@
-@PART[ROC-LEMAscent]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-LEMLMAEBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
         moduleID = #$/name$-lmae
         template = waterfall-hypergolic-aerozine50-upper-1
         audio = pressure-fed-1
-        position = 0,0,0.04
+        position = 0,0,0.02
         rotation = 0, 0, 0
-        scale = 0.51, 0.52, 0.52
+        scale = 0.67, 0.67, 0.67
         glow = ro-hypergolic-az50
         glowStretch = 0.8
     }
 }
 
-@PART[ROC-LEMAscent]:AFTER[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-LEMAscentBDB]:AFTER[ROWaterfall]:NEEDS[Waterfall]
 {
     MODULE
     {
@@ -28,19 +28,21 @@
         {
             name = rcs
             linkedTo = rcs
-            thrusterTransformName = RCSthruster
+            thrusterTransformName = rcsTransform
         }
         TEMPLATE
         {
             templateName = rowaterfall-rcs-hypergolic-1
-            overrideParentTransform = RCSthruster
-            position = 0,0,0
+            overrideParentTransform = rcsTransform
+            position = 0,-0.01,0
             rotation = 0, 0, 180
-            scale = 1.1, 1.1, 1.1
+            scale = 1.6, 1.6, 1.6
         }
     }
 
-    @EFFECTS
+	!EFFECTS {}	//Isn't this supposed to be automatically deleted? It isn't for some reason, so manually remove.
+
+    %EFFECTS
     {
         control
         {
@@ -48,7 +50,7 @@
             {
                 channel = Ship
                 clip = sound_rocket_mini
-                transformName = RCSthruster
+                transformName = rcsTransform
                 volume = 0.0 0.0
                 volume = 0.02 0.1
                 volume = 0.5 0.1
@@ -62,7 +64,7 @@
 }
 
 
-@PART[ROC-LEM-LMDE]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-LEMLMDEBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
@@ -73,5 +75,28 @@
         scale = 1.13, 1.13, 1.13
         glow = ro-hypergolic-az50
         glowStretch = 0.8
+		defaultMainPlumeVariantName = H-Class
+
+		MainPlumeVariant:NEEDS[B9PartSwitch]
+        {
+            name = J-Class
+            template = waterfall-hypergolic-aerozine50-upper-1
+            position = 0,0,0.09
+			scale = 1.19, 1.19, 1.19
+            recomputeGlowSize = true
+        }
+    }
+
+	@MODULE[ModuleEngineConfigs]:NEEDS[B9PartSwitch]
+    {
+        @CONFIG[LMDE-H]
+        {
+            %rowaterfallVariant = H-Class
+		}
+        @CONFIG[LMDE-J] { %rowaterfallVariant = J-Class }
+		@CONFIG[TR-201]
+		{
+			%rowaterfallVariant = J-Class
+		}
     }
 }
