Add waterfall support to Apollo CM

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/Waterfall_Support_ApolloETS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/Waterfall_Support_ApolloETS.cfg
@@ -1,3 +1,19 @@
+@PART[ROC-ApolloCMBDBBlockIII]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{
+    ROWaterfall
+    {
+        template = rowaterfall-rcs-cold-gas-1
+        audio = rcs-jet-1
+        transform = rcsTransform
+        position = 0,-0.025,0
+        rotation = 0, 0, 180
+        scale = 0.6, 0.6, 0.6
+    }
+}
+
+//	================================================================================
+//	Deprecated Parts
+//	================================================================================
 @PART[ROC-ApolloCMBlockIII]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
