--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/Waterfall_Support_ApolloBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/Waterfall_Support_ApolloBDB.cfg
@@ -1,25 +1,12 @@
-@PART[ROC-ApolloCM]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-ApolloCMBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
         template = rowaterfall-rcs-cold-gas-1
         audio = rcs-jet-1
-        transform = RCSthruster
-        position = 0,0.03,0
+        transform = rcsTransform
+        position = 0,-0.025,0
         rotation = 0, 0, 180
-        scale = 1.5, 1.5, 1.5
-    }
-}
-
-@PART[ROC-ApolloRCS]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
-{
-    ROWaterfall
-    {
-        template = rowaterfall-rcs-hypergolic-1
-        audio = rcs-jet-1
-        transform = RCSthruster
-        position = 0,0.05,0
-        rotation = 0, 0, 180
-        scale = 1.7, 1.7, 1.7
+        scale = 0.6, 0.6, 0.6
     }
 }
