--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLMAEBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLMAEBDB.cfg
@@ -113,15 +113,7 @@ PART
 		responseSpeed = .05
 	}
 
-	MODULE
-	{
-		name = FXModuleThrottleEffects
-		fxModuleNames = heatColor
-		responseSpeed = 1.0
-		dependOnEngineState = True
-		dependOnThrottle = True
-	}
-
+	//Remove radiative glow, LMAE was 100% ablative?
 	MODULE
 	{
 		name = FXModuleThrottleEffects
@@ -129,37 +121,6 @@ PART
 		responseSpeed = 1.0
 		dependOnEngineState = True
 		dependOnThrottle = True
-	}
-
-	MODULE
-	{
-		name = ModuleColorChanger
-		moduleID = heatColor
-		animRate = 0.025
-		shaderProperty = _EmissiveColor
-		excludedRenderer = innerGlow
-		toggleInEditor = false
-		toggleInFlight = false
-		redCurve
-		{
-			key = 1 1 1 1
-			key = 1 1 1 1
-		}
-		greenCurve
-		{
-			key = 0 0 1 1
-			key = 1 1 1 1
-		}
-		blueCurve
-		{
-			key = 0 0 1 1
-			key = 1 1 1 1
-		}
-		alphaCurve
-		{
-			key = 0 0 1 1
-			key = 1 1 1 1
-		}
 	}
 
 	MODULE
