Rename all deprecated parts
Rename all DECQ parts which are now deprecated by the introduction of the new BDB Apollo parts.

--- a/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE(Dprct).cfg
@@ -33,7 +33,7 @@ PART
 	entryCost = 1
 	category = Engine
 	subcategory = 0
-	title = Apollo LM Descent Engine
+	title = Deprecated
 	manufacturer = TRW
 	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boiloff, but are far less efficient than hydrolox or even kerolox. The version used on J-class missions had slightly higher specific impulse (this, along with other changes, gave enough payload capacity for the rover, for example). A later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, descent, landing, engine, lmde
