--- a/GameData/ROCapsules/PartConfigs/LEM/LEMDecoupler(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMDecoupler(Dprct).cfg
@@ -33,7 +33,7 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Apollo LM Decoupler
+	title = Deprecated
 	manufacturer = Grumman Aerospace Corporation
 	description = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent, decoupler
