--- a/GameData/ROCapsules/PartConfigs/LEM/LEMDescent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMDescent(Dprct).cfg
@@ -35,7 +35,7 @@ PART
 	entryCost = 1
 	category = FuelTank
 	subcategory = 0
-	title = Apollo LM Descent Stage
+	title = Deprecated
 	manufacturer = Grumman Aerospace Corporation
 	description = The Apollo Lunar Module descent stage. Equipped with storage boxes for storing equipment. It also includes a node to attach the Lunar Roving Vehicle.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, descent, landing, land, legs
