--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
@@ -45,7 +45,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Apollo LM Ascent Stage
+	title = Deprecated
 	manufacturer = Grumman Aerospace Corporation
 	description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent
