Gate Fuel Cells, fix SIM door
Disable stock Apollo SM fuel cells if kerbalism is installed, and correct the SIM bay door jettison module type.

--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSMBDB.cfg
@@ -489,7 +489,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleBdbJettison
+		name = ModuleJettison
 		jettisonName = SIM_bay_door
 		jettisonedObjectMass = 0.03089
 		jettisonDirection = 0,0,0
@@ -525,7 +525,7 @@ PART
 	//	Using 1400 W output power as the nominal max value here (range 400 W to 1420 W each),
 	//	since the fuel cells can automatically throttle down if the batteries are charged.
 
-	MODULE
+	MODULE:NEEDS[!Kerbalism]
 	{
 		name = ModuleResourceConverter
 		ConverterName = Fuel Cell #1
@@ -567,7 +567,7 @@ PART
 		}
 	}
 
-	MODULE
+	MODULE:NEEDS[!Kerbalism]
 	{
 		name = ModuleResourceConverter
 		ConverterName = Fuel Cell #2
@@ -609,7 +609,7 @@ PART
 		}
 	}
 
-	MODULE
+	MODULE:NEEDS[!Kerbalism]
 	{
 		name = ModuleResourceConverter
 		ConverterName = Fuel Cell #3
